@@ -24,6 +24,8 @@
     * Added 'strict_config' option to have the config return an object instead
       of a hashref. (Ovid)
     * GH #708: Added support for query strings in dancer_request (Jacob Rideout)
+    * It's possible for the user to set the environments directory using a new
+      environment variable (DANCER_ENVDIR) or using `set envdir => $path`
 
 1.3093      29.02.2012
 
